# harmonyos_ui_kit

./: .gitignore  .metadata  AGENTS.md  CLAUDE.md  IMPROVEMENTS.md  README.md  makefile  mise.toml  pubspec.yaml
.claude/memory/: infinite_scroll_view_readme.md
.claude/plans/: cosmic-enchanting-shell.md  dazzling-kindling-flurry.md  drifting-chasing-pebble.md  elegant-gathering-piglet.md  eventual-enchanting-ritchie.md  functional-dazzling-gadget.md  glistening-purring-pancake.md  greedy-knitting-diffie.md  hidden-seeking-piglet.md  humble-swimming-fiddle.md  imperative-tickling-sundae.md  inherited-orbiting-truffle.md  moonlit-waddling-lagoon.md  noble-percolating-papert.md  sharded-bubbling-castle.md  structured-jingling-nest.md  tranquil-popping-ocean.md
.zed/: debug.json  settings.json
android/app/: build.gradle.kts
assets/js/: 8se.cjs  config.json  flsft.cjs  ftmeinv.cjs  gqtuku.cjs  gqwht.cjs  jdtaotu.cjs  kaizty.cjs  meirentu.cjs  meitule.cjs  meitule.js  meitule_reg.js  meizitu.cjs  mtmeinv.cjs  mtmnt.cjs  plwht.cjs  sexygirl.cjs  swmzt.cjs  symzt.cjs  taotu.cjs  todo.cjs  tsmnt.cjs  tyys2.cjs  v2ph.cjs  wallhaven.cjs  wallspic.cjs  xsnvshen.cjs  ywmeitu.cjs  ywsft.cjs
assets/views/: hadaka.js  tabs.html
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart  router.dart  router_args.dart
lib/core/error/: app_exception.dart  result.dart
lib/core/extensions/: file_ext.dart  numbric_ext.dart  string.ext.dart  string_ext.dart  widget_ext.dart
lib/core/network/: api_exception.dart  base_repository.dart  dio_client.dart
lib/core/storage/: perfs.dart
lib/core/theme/: app_theme_provider.dart
lib/core/utils/: date.dart  logger.dart  logger.g.dart
lib/data/repositories/: js_config_repository_impl.dart  js_gallery_repository_impl.dart  js_plugin_repository_impl.dart  rust_daily_repository_impl.dart
lib/domain/entities/: detail_accumulator_state.dart  detail_item.dart  detail_load_state.dart  gallery_accumulator_state.dart  gallery_detail.dart  gallery_item.dart  menu_item.dart  plugin_info.dart  rust_daily_page_data.dart  rust_daily_tab.dart  site_config.dart
lib/domain/repositories/: js_config_repository.dart  js_gallery_repository.dart  js_plugin_repository.dart  rust_daily_repository.dart
lib/exts/: logger.dart  strings.dart
lib/models/: app_exception.dart  rust_daily_data.dart
lib/models/plugin/: gallery_item.dart  plugin_info.dart
lib/pages/: bottom_bar.dart  dynamic_html_view_page.dart  glass_kit.dart  glass_page.dart  harmony.dart  icon_preview.dart  immersive.dart  js_parse.dart  layout.dart  loading_page.dart  rust_daily.dart  rust_daily_detail_page.dart  rust_daily_list_tab.dart  splash_page.dart  webf.dart
lib/pages/js/: detail_page.dart  gallery_page.dart  layout.dart  setting_panel.dart
lib/presentation/pages/: bottom_bar.dart  dynamic_html_view_page.dart  harmony.dart  icon_preview.dart  js_layout.dart  js_parse.dart  layout.dart  loading_page.dart  quickjs_page.dart  splash_page.dart
lib/presentation/widgets/: async_value_widget.dart  back_to_top_button.dart  infinite_scroll_view.dart  infinite_scroll_view_README.md  loading.dart  pagination.dart  scrollbar.dart
lib/providers/: dio_provider.dart  rust_bridge_provider.dart  rust_daily_provider.dart
lib/providers/js/: config_provider.dart  config_provider.g.dart  detail_provider.dart  detail_provider.g.dart  gallery_provider.dart  gallery_provider.g.dart  js_engine_provider.dart  plugin_info_provider.dart  runtime_provider.dart  settings_provider.dart
lib/repositories/: base_repository.dart
lib/services/: logger.dart
lib/services/api/: api_exception.dart
lib/widgets/: async_value_widget.dart  infinite_scroll_view.dart  loading.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
ohos/: build-profile.json5  oh-package.json5
ohos/AppScope/: app.json5
test/: widget_test.dart
third_library/fjs/: .gitignore  .pubignore  CHANGELOG.md  README.md  README_zh.md  pubspec.yaml
third_library/fjs/libfjs/: Cargo.toml
third_library/fjs/libfjs/src/: bytecode_support.rs  frb_generated.rs  lib.rs
third_library/fjs/libfjs/src/api/: bytecode.rs  engine.rs  error.rs  module.rs  runtime.rs  source.rs  value.rs
third_library/fjs/libfjs/src/runtime/: driver.rs  error_sink.rs  executor.rs  job_error.rs  mod.rs  stack.rs  teardown.rs
third_library/fjs/libfjs/src/tests/: async_tests.rs  engine_tests.rs  error_tests.rs  llrt_module_tests.rs  mod.rs  module_tests.rs  runtime_architecture_tests.rs  runtime_tests.rs  value_tests.rs
third_library/harmonyos_ui/: .metadata  CLAUDE.md  DESIGN.md  pubspec.yaml
third_library/hm_icon/: README.md  pubspec.yaml
third_library/t_lib/: .gitignore  .metadata  CLAUDE.md  JSRuntime_API.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
third_library/t_lib/rust/: Cargo.toml
third_library/t_lib/rust/src/: dom.rs  frb_generated.rs  lib.rs
third_library/t_lib/rust/src/api/: boa.rs  builtin_options.rs  hello.rs  mod.rs  module.rs
third_library/t_lib/rust/src/js_runtime/: internal.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+171 files in other folders)
